# cppAVToolbox

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/core/: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  ExternalToolJob.cpp  ExternalToolJob.h  IConsoleToolPlugin.h  PluginManager.cpp  PluginManager.h  VmafResult.cpp  VmafResult.h
src/plugins/: CMakeLists.txt
src/plugins/FFmpegPlugin/: CMakeLists.txt  CalculateVmafWidget.cpp  CalculateVmafWidget.h  FFmpegPlugin.cpp  FFmpegPlugin.h  FFmpegSettingsWidget.cpp  FFmpegSettingsWidget.h  GenerateMpegTsWidget.cpp  GenerateMpegTsWidget.h  MediaInfoWidget.cpp  MediaInfoWidget.h
